docs/데이터파트/version4.4/명세서.md
# 데이터 파트 명세서 (v4.4)

> 담당 이동원 — 수집 · 저장 · 정제 · 전처리 · **반입 · 반출(HF)** · 고도화
> (수집 현황 **화면은 2026-08-31 부로 강민석 님 담당**으로 이관)
> v4.4 · 2026-09-10 · 이전 판 [v4.3](../version4.3/)(총수익 축 · v15) ·
> [v4.2](../version4.2/)(대용치를 원자료로 다시 잰 판 · 배당 수집) ·
> [v4.1](../version4.1/)(v4.0 이 찾은 것을 닫은 판 · 34칸 · 7축) ·
> [v4.0](../version4.0/)(밖을 보고 우리 자리를 잰 판 · 퀀트 기준 대조) ·
> [v3.8](../version3.8/)(KOSDAQ 업종 36장 · 기본키 결함 복구) ·
> [v3.7](../version3.7/)(⑮ 원장 계약 검증기 · 업종 KOSDAQ 실측) ·
> [v3.5](../version3.5/)(감자 보정 정본화 · 극단 32행 → 0행) ·
> [v3.4](../version3.4/)(두 세션을 한 번에 잰 문서 판) · [v3.3](../version3.3/)(품질 규약 ·
> 감자 미조정 발견) · [v3.2 명세서](../version3.2/명세서.md)(본문 전문) · [변경사항](변경사항.md)
> 팀 전체 요구사항은 [요구사항](../../요구사항/README.md)

이 문서는 **읽는 사람이 "무엇이 만들어지는가"를 먼저 알게** 쓰였습니다.
숫자에는 잰 날짜를 붙였습니다 — 수집이 돌면 숫자가 움직이기 때문입니다.

🆕 **v4.4 는 결과와 사건을 가른 판**입니다(2026-09-10). 자본변동은 지금까지 **결과로만**
있었습니다 — `adj_close` 는 이미 펴진 값이고 `adj_source` 는 출처만 말합니다. *"무슨 일이
언제 얼마만큼 일어났나"* 가 없어서 물을 때마다 923만 행을 역산해야 했습니다(4분).
이 판은 `corporate_action` 표(마이그레이션 **v16** · **44,290건** · 2,946종)를 세워
**D-24 를 닫습니다.**

**검산은 어긋난 건수입니다.** 독립 증거(액면가·상장일)로 잴 수 있는 **730건 중 8건**이
chain 판정과 어긋났고, chain 을 안 쓰고 재는 축에서 **17건**이 원본 자기모순으로 잡혔습니다
— 그 17건은 **17/17 이 정리매매**이고 전부 그 종목의 마지막 7거래일에서 시작합니다.

🔴 이 판이 배운 것 둘.

- **출처가 둘이라고 대조가 되는 것이 아닙니다.** `stock_base_info.list_shrs` 는 923만 행
  전부 `daily_price.listed_shares` 와 같았습니다 — 대조가 아니라 복사였습니다.
- **검사가 대상과 같은 값을 쓰면 초록은 아무것도 뜻하지 않습니다.** 처음에는 `rights_off`·
  `resume_revalue` 도 대조했고 **3,974건이 통째로 "맞음"** 이 나왔습니다. `series_restart`
  에는 이 함정을 피해 놓고 바로 옆자리에서 밟았습니다.

자세한 것은 [기능명세 v1.8](../../기능명세/version1.8/기업행위_이벤트_표.md) ·
[ERD v2.6 §2.11](../../erd/version2.6/ERD.md) ·
[노트북 02/09](../../../notebooks/02-품질·전처리/09.결과만-있고-사건이-없었다.ipynb) 에 있습니다.

---

**v4.3 은 받아 둔 배당으로 축을 세운 판**이었습니다(2026-09-10). v4.2 가 배당 **71,681행**을
받고 *"라벨이 배당만큼 눌려 있다"* 를 쟀는데, 그것을 잰 것과 고친 것은 다릅니다. 그 판은
`daily_price` 에 **총수익 3칸**(`adj_close_tr`·`adj_dividend`·`is_dividend_suspect` · 마이그레이션
**v15**)을 얹어 **D-25 를 닫았습니다.**

**검산은 부호가 뒤집히는가입니다.** 배당락일 일간수익률이 가격 축에서는 평소보다
**−1.1465%p** 인데 총수익 축에서는 **+1.3235%p** 입니다. 연도별로 가격 축이 음수인 해가
**11/15** 였는데 총수익 축은 **1/15** 로 줄었습니다.

🔴 세 가지를 함께 못박았습니다.

- **`adj_close` 를 고치지 않았습니다.** 옆에 세웠습니다 — 가격 축과 성과 축은 답하는 질문이
  다릅니다.
- **총수익 칸은 피처가 아닙니다.** 배당 확정이 주주총회라 그 전에는 금액을 알 수 없어
  입력으로 넣으면 미래참조가 됩니다. 라벨은 그대로 `adj_open`(T+1 시가 → T+6 시가)입니다.
- **단위 오류를 크기로 자르지 않았습니다.** 배당이 종가보다 큰 행 넷 중 **셋이 정당한
  청산분배금**이었습니다. 대신 금액과 배당률로 그날의 액면가를 되짚어 **원본이 자기
  정합적인가**로 가릅니다(조인 대상의 99.29%가 맞습니다).

그리고 **따라가야 하는 곳이 다섯에서 여섯이 됐습니다** — `supply/market.py` 의
`PRICE_COLUMNS` 가 있었습니다(§7 참조). 자세한 것은 [변경사항](변경사항.md) 을 보십시오.

**v4.2 는 대용치로 재던 것을 원자료로 다시 잰 판**이었습니다(2026-09-09 네 번째 세션).
배당 **71,681행**을 받아 배당락일을 달력으로 역산·검증했고, 그 결과 v4.1 이 적은 배당락
효과가 **−0.455%p → −1.4665%p (3.2배)** 로 바뀌었습니다. 그리고 전처리 후보 다섯을 돌려
**전부 기각**했습니다 — 원값 유지.

🆕 **v4.1 은 v4.0 이 찾아낸 것을 실제로 닫은 판**이었습니다(2026-09-09) — 반출본 28 → **34칸** ·
원장 5 → **7축**.

**v4.0 은 밖을 보고 우리 자리를 잰 판**이었습니다(2026-09-08 밤). v3.9 까지가 *"우리가 무엇을
했나"* 였다면 이 판은 *"퀀트가 원래 지키는 것 중 우리가 안 지키는 것은 무엇인가"* 를 묻습니다.
본체는 🆕 [퀀트기준_대조](퀀트기준_대조.md) 이고, **일곱 축을 재서 다섯이 표준에 못 미쳤습니다.**

우리가 이미 넘은 것 셋 — **생존 편향 없음**(개발구간 중 끊긴 종목 750개 보존) · `as_of` 강제
(qlib 에도 없다) · 품질 원장 **5축 17지표**(qlib 건강검사는 4개). 못 미치는 것 다섯 —
~~D-24 기업행위 이벤트 표 없음~~(**v4.4 에서 닫음** — `corporate_action` 44,290건) · 🆕 D-25 **현금배당 미조정**(배당락일
−0.455%p · 15년 중 11년 음수) · 원장에 **유효성 축 없음**(위반 124행) · **거래량 급변 검사 없음** ·
🆕 D-66 **판정을 만들어 두고 파일에 안 실음**(큰 벌에 남은 비정상 거래일 **3.063%**).

그리고 품질 원장이 **설계에서 구현으로** 갔고(🆕 D-64 · PR #180), 배포 고지문을 저장소 정본으로
들였으며(🆕 D-65 — 서버 `CHANGES.md` 가 09-03 에서 멈춰 배포 세 번이 고지되지 않았습니다),
배포 경로에서 결함 셋을 찾아 고쳤습니다(PR #183 · #184).
**28칸 반출본은 완성해 두고 보류했습니다** — D-66 을 함께 넣어 한 번에 올리는 쪽이 낫습니다.

앞 판 v3.9 는 **같은 날 오후, 코드가 먼저 움직인 것을 문서가 따라잡은 판**입니다(2026-09-07 저녁).
버튼 갱신 파이프라인이 **설계에서 구현으로** 갔고(D-90~92 ✅ · 달력이 제 단계가 되어 **7단계** ·
시험 28건 · [기능명세 v1.7](../../기능명세/version1.7/버튼_갱신_파이프라인.md) · PR #152), 이상치
판별자가 **크기에서 KRX 등락률과의 어긋남으로** 바뀌었고(🆕 D-18 `supply.adj_quality` · 재개일
규칙 보정 · 51종 재생성 · PR #156), 지수 기본키에 **시장이 들어갔습니다**(v13 ·
[ERD v2.4](../../erd/version2.4/ERD.md) · PR #157). 개별종목 후보 패널을 처음으로 전수 실측해
§2.11 에 적었고(176,705행 · 정지일이 학습표본에서는 **0.016%**), 오준영 님의 #159(공통 OOS
시작일)에는 **지수만 있으면 되고 지수는 받을 수 있다**고 답했습니다(첫 검증일 249거래일 앞당김 ·
[노트북 06/12](../../../notebooks/06-검토·발견/12.앞당기려면-종목이-아니라-지수가-필요하다.ipynb)).
그리고 🆕 [데이터 품질 원장 설계](데이터_품질_원장_설계.md)를 냈습니다 — 설계만이었고 **구현은 v4.0 에서 끝났습니다**(D-64).

앞 판 v3.8 은 **선택으로 열어 둔 KOSDAQ 업종을 실제로 받은 판**입니다(2026-09-07 아침). 팀장이 18장을
직접 내려받아 **36장 40,874행**(격리 0 · 전량 대조 일치)이 되었고, KOSPI 18장으로는 보이지 않던
것이 드러났습니다 — KRX 화면이 한 종목을 두 업종에 싣는 **17쌍**입니다. 결정적 규칙으로 하나를
고르고 🆕 `industry_ambiguous` 로 그 사실을 남깁니다. 🔴 그리고 `index_price` 기본키에 시장이
없어 KOSPI 업종지수 **40,324행**을 덮어썼다가 **완전 복구**하고, 받기 전에 막는 문을 세웠습니다(#144).

앞 판(v3.7)의 흐름은 이렇습니다. 강민석 님이
백테스트 원장에 되먹임 칸 아홉을 뚫으셨고(PR #131), 그 원장이 학습에 들어갈 모양인지 재는
**계약 검증기**(`supply/backtest_ledger.py` · 시험 33건 · PR #135)를 냈습니다 — 🔴 원장은 아직 HF 에
없고, 선언된 환경에서 백테스트 모듈이 import 되지 않으며, `hash()` 시드라 실행마다 예측이 다릅니다(#110).
선택 항목 **업종 KOSDAQ** 은 받기 전에 코드가 어떻게 다루는지 시험 7건으로 실측했습니다(가이드 §8 ·
받지는 않았습니다). 극단 수익률은 **83 = 개발 76 + 홀드아웃 7** 로 구간을 갈라 적습니다(#132).
[변경사항](변경사항.md).

v3.6 은 v3.5 가 **16종만** 돌렸다는 것을 깨닫고 **3,677종 전체**로 넓힌 판입니다.
다섯 종목이 더 나왔고 그중 하나가 **오검출**이라, 관문을 하나 더(③ KRX 기준가 대조) 두고
다시 깔았습니다. 그리고 이틀 밀려 있던 **HF 재배포**를 마쳤습니다 — 업종 칸 3개가
09-03 이후 팀원에게 안 가고 있었습니다. 상세는 [변경사항](변경사항.md) ·
재현은 [노트북 06/07](../../../notebooks/06-검토·발견/07.열여섯을-고친-것은-전-종목을-고친-것이-아니다.ipynb).

---

## 0. 이 파트가 끝나면 팀원이 할 수 있는 것

| 누가 | 무엇을 | 어떻게 |
|---|---|---|
| 오준영 (모델) | 학습 표를 받아 쓴다 | HF `alphastack-krx-dev` 에서 `hf_hub_download()` 한 줄 |
| 오준영 (모델) | 재무를 시점 정합으로 붙인다 | HF `alphastack-dart` 의 **pit/** 층 (시점은 `rcept_dt`) · 또는 `financial/` |
| 오준영 (모델) | 종목코드 ↔ 법인 ↔ 재무를 잇는다 | HF `identity/` 두 파일 — `crno` 로 붙인다 (외국기업 `0000000000000` 은 먼저 거른다) |
| 강민석 (백테스팅) | 봉인 구간이 반출물에 없음을 믿는다 | 반출마다 **파일을 다시 열어** 홀드아웃을 재검사한다 |
| 신장환 (피처) | 지표 함수에 넣을 표의 모양을 안다 | 계약 테스트가 컬럼·정렬·dtype 을 고정한다 |
| 신장환 (피처) | 공시 감성을 피처로 넣을지 판단한다 | `text/` 카드 절 — **5일 방향과 무관**(V 0.026) · 넣지 말라는 뜻이 아니라 안 오른다는 실측 |
| 팀 전체 | 손으로 받은 CSV 를 안전하게 들인다 | 반입 엔진이 규격으로 판정하고 보고서를 준다 |
| 팀 전체 | 발표 때 "이 숫자 어디서 났나"에 답한다 | 수집 대장 + 실행 기록 + 대장(MANIFEST) 3종 해시 + 노트북 06/ |

각 기능의 줄 단위 해설은 **[핵심코드 v1.2](../../핵심코드/version1.2/)** 에
있습니다 (①수집 ②반입 ③공급 ④반출·HF · 팀원 편 ⑤⑥⑦). 이 문서는 전체 지도를 그립니다.

---

## 1. 하루를 따라가 보기

### 아침 — 어제 자료가 잘 들어왔나

```bash
python scripts/check_db.py            # 표 21개의 행 수·기간 한 장 (v13)
python scripts/check_keys.py --live   # 키 10종이 실제로 통하는지 (.env 에는 15종 · 나머지 5종은 아직 검사 밖)
python scripts/check_data.py          # 시세 품질 게이트 (설명되지 않는 이상치 = exit 1)
```

수집을 다시 돌려도 안전합니다 — 대장(`collect_log`)이 이미 받은 날짜를 건너뛰고,
예산(`call_budget`)이 한도 앞에서 멈춥니다. 예산 통은 **출처 6종**(`budget.LIMITS`)이고
공공데이터포털은 금융위·예탁결제원이 **같은 키·같은 통**입니다.

### 수집 — 한 명령으로

```bash
python -m pipelines.refresh               # 🆕 버튼 한 번 — 수집 → 달력 → (수정주가) → 게이트 → 판정 → 반출 → 업로드
python -m ingest                          # 시세·지수·거시만 (refresh 의 ① 단계)
python scripts/fetch_disclosures.py --start 202409 --end 202409   # 공시 목록은 날짜로
python scripts/score_text_signal.py       # 안 매긴 고유 제목만 (로컬 CPU · 0원)
```

실행 하나가 `ingest_run` 한 행이고 출처별 단계가 `ingest_run_stage` 에 남습니다. `refresh` 는
7단계를 같은 표에 남기고, 두 번 눌러도 한 번만 돕니다 (§2.9 · [기능명세 v1.7](../../기능명세/version1.7/버튼_갱신_파이프라인.md)).

### 오전 — 팀원이 자료를 쓴다

```python
from supply import index_series
df = index_series(as_of="2026-09-01")   # as_of 를 빼면 그 자리에서 터진다
```

모델 학습용 대량 자료는 supply 가 아니라 **HF 배포본**으로 받습니다 —
DB(6,561 MB · 2026-09-07)는 공유하지 않고, 개발구간만 잘린 반출물을 공유합니다.

### 반출 — 검증기가 먼저 돈다

```bash
python scripts/export_text_signal.py                      # 텍스트 신호 · MANIFEST_text.json
python scripts/export_reference_dataset.py --upload --dry-run   # 참조 자료 · 검증기 → 충돌 검사까지만
python scripts/upload_to_hf.py --path data/outbox/<폴더>        # 검증기 4종 ✅ 라야 올라간다
```

**붉으면 안 올라갑니다.** 검증기 4종(신원 · 기본정보 · 업종 · 텍스트 신호)이 `upload_to_hf`
의 게이트라 "고쳤다"와 "나갔다"가 갈리지 않습니다 (규약 7.1 · 2026-09-03 에 겪은 뒤 세움).

### 팀원이 파일을 보내온다

`data/inbox/` 에 넣고 반입 엔진을 돌리면 규격 판정 → 합격/격리 → 사람이 읽는
보고서(`reports/inbox/<날짜>/`)까지 나옵니다. 원본 파일은 **검증이 끝난 뒤에만**
지웁니다. 받는 방법은 [자동수집 가이드](../version2.3/자동수집_가이드.md) ·
[직접수집 가이드](../version2.4/직접수집_가이드.md) ·
[업종분류현황 직접수집](직접수집_가이드_업종분류현황.md).

---

## 2. 무엇을 만드는가

상태는 **이 표에만** 적습니다. v2.1 의 D-번호를 이어 쓰고, 신설 영역은 D-50 대 이후 번호를
답니다. 고도화는 D-80 대부터(텍스트 신호 D-80 · 갱신 파이프라인 D-90 · 관측 규격 D-100)입니다.

### 2.1 공통 (D-00 ~ D-04)

| ID | 할 수 있는 일 | 상태 | 확인 방법 |
|---|---|---|---|
| D-00 | `as_of` 없이는 과거를 못 본다 | ✅ | `tests/test_supply_boundary.py` |
| D-01 | 다시 받지 않고 원문에서 다시 만든다 | ✅ | `tests/test_renormalize.py` |
| D-02 | 안 받은 이유를 다섯으로 가른다 | ✅ | `tests/test_collect_log.py` |
| D-03 | 크롤링 전에 `robots.txt` 를 본다 | 🟡 | `tests/test_robots.py` · 부르는 곳 0건 (크롤러를 아직 안 만듦) |
| D-04 | 한도를 넘기 전에 우리가 먼저 센다 | 🟡 | `tests/test_budget.py` · 연결된 수집기 **KRX · DART · 공공데이터포털(금융위 + 예탁결제원 같은 통)** (2026-09-04) · 정본은 `budget.LIMITS` 6종 · 예탁결제원은 **파라미터 검사가 예산보다 먼저** · HF 원격 예산(옛 D-83)은 로컬 전환으로 불필요 |

### 2.2 자료를 받아 오는 곳 (D-10 ~ D-25)

| ID | 할 수 있는 일 | 상태 | 확인 방법 |
|---|---|---|---|
| D-10 | 시세가 성한지 검사하고 아니면 멈춘다 | ✅ | `scripts/check_data.py` → `reports/data_quality.json` |
| D-11 | 하루 한 번 새것만 받는다 | ✅ | `tests/test_krx_store_collect_log.py` · `python -m ingest` |
| D-12 | 재무를 접수일 기준으로 쌓는다 | ✅ | v6 — `dart_financial` 662,933행 · 350종 · FY2015~2025 · 접수일 100% (2026-09-04) · `scripts/check_dart.py` |
| D-13 | 거시 지표를 "알게 된 날"로 쌓는다 | ✅ | v7 — `macro_series` 17,851행 · 9종 · ⚠️ ECOS 는 발표일을 안 줘 `known_at` 은 **계산값** |
| D-14 | 수정주가를 계산해 둔다 | ✅ | v9 (#51 · PR #78) — `adj_*` 4칸 · 9,223,644행 100% · 🔴 **FDR 은 감자를 조정하지 않는다**(17자리) → **v3.5 에서 `scale_series` ⑤ 로 정본화** · 관문 둘(원가격 검산 · FDR 미반영) · `+ca_fix` 43,778행 · 시험 10건 · `verify_base_info` §9 "못 이은 자리 **0**" |
| 🆕 D-15 | **종목기본정보를 그날의 사실로 쌓는다** (우선주 판별 정본) | ✅ | **v11** (PR #102) — `stock_base_info` 9,220,879행 · 3,677종 · 2010-01-04 ~ 2026-08-31 · `verify_base_info.py` 9절 (이름추측 어긋남 10종·10,190행 · 자리표시자 7종 0건 · 자본변동 2,048자리) |
| 🆕 D-16 | **종목코드 ↔ 법인등록번호 ↔ ISIN 을 잇는다** | ✅ | **v10** (PR #91) — `stock_identity` 4,197,242행 · `corp_profile` 40,569행 · `verify_identity.py` · 포털 `EP_*` 17개 + 예탁결제원 `ksd_data.py` (PR #104 · [기능명세 v1.4](../../기능명세/version1.4/공공데이터포털_경로틀과_예탁결제원.md)) |
| D-17 | **업종을 as-of 로 붙인다** (사람이 받은 KRX 스냅샷) | ✅ | PR #99 · **#145** — 🆕 v3.8: **KOSPI 18장 + KOSDAQ 18장 = 36장 · 40,874행** (격리 0 · 전량 대조 일치). `industry` 채움이 개발구간 **41.6% → 거의 100%**. 🔴 KRX 화면이 한 종목을 업종 둘에 싣는 **17쌍**을 찾아 결정적 규칙(같은 스냅샷 종목 수 많은 쪽 → 동수면 사전순)으로 하나를 고르고 🆕 **`industry_ambiguous`** 로 남긴다 · 🔴 KRX 약관이 자동 수집을 금지해 **스냅샷은 손으로만** · [가이드 §8](직접수집_가이드_업종분류현황.md) |
| 🆕 D-18 | **수정주가 오류를 크기가 아니라 어긋남으로 표시한다** (진짜 사건은 남긴다) | ✅ | **v3.9** (PR #156 · #132) — `supply.adj_quality.attach_adjustment_quality` 칸 넷(`adj_return_1d` · `adj_change_rate_gap` · `is_adj_suspect` gap > 1%p · `is_extreme_return` \|r\| > 30% 이고 의심 아님) · 시험 16건 · 재개일 규칙 보정(인적분할·회생 재상장은 감자가 아니다 · chain 52건 51종목 DART 전수 대조) · 51종 재생성 뒤 `verify()` ① 0쌍 · 후보군 의심 행 **0** · 전 시장 의심 1,353행(chain 119 · fdr 1,234) · [품질 규약 §4.4](데이터_품질_규약.md) · [노트북 06/10](../../../notebooks/06-검토·발견/10.이상치는-크기가-아니라-어긋남으로-가른다.ipynb) |
| D-20~23 | 뉴스·카페글·동영상 메타 | 🔴 | 미착수 (2·3차 · 뉴스는 약관 판단 먼저) |
| 🆕 D-24 | **기업행위를 이벤트 표로 남긴다** (역산이 아니라 사건에서) | ✅ | 🆕 **v4.4 완료** — `corporate_action` 표(**v16** · 44,290건 · 2,946종 · 20100105~20260904 · 적재 264초). 사건 **7종**(`share_change` 39,584 · `rights_off` 3,191 · `resume_revalue` 783 · `split_merge` 666 · `par_reduction` 42 · `market_transfer` 22 · `series_restart` 2). 🔴 **액면가만 보면 42건을 10배 망친다** — 자본금으로 갈라야 `par_reduction`(가격이 안 움직임)이 분리된다(42/42 맞음). 🔴 **`agrees` 는 chain 이 안 쓰는 축에서만** — 기준가 갈래를 대조하면 3,974건이 순환으로 초록이 된다. 판정 가능 **730건 중 어긋남 8** · 원본 자기모순 **17건(17/17 정리매매 · 학습 유출 0)**. 문턱 `1e-4` 는 88,700배짜리 빈 구간이 정했다. `pipelines.refresh` 의 **`action` 단계**(7 → **8단계**) · 시험 28건 · [기능명세 v1.8](../../기능명세/version1.8/기업행위_이벤트_표.md) · [ERD v2.6 §2.11](../../erd/version2.6/ERD.md) · [노트북 02/09](../../../notebooks/02-품질·전처리/09.결과만-있고-사건이-없었다.ipynb) |
| 🆕 D-25 | **현금배당을 받아 총수익 축을 만든다** | ✅ | 🆕 **v4.3 완료** — `dividend` 71,681행(v14 · 72콜) + `daily_price.adj_close_tr`·`adj_dividend`·`is_dividend_suspect`(**v15**). 전 종목 3,678개·9,231,938행 적재 · 배당 얹힌 행 20,243 · 단위 오류 1. **배당락일 눌림이 뒤집혔다** — 가격 축 −1.1465%p → 총수익 축 **+1.3235%p**, 음수인 해 11/15 → **1/15**. 🔴 조인 축은 `ex_date`(기준일은 12월에 거래일이 0.3%) · 🔴 배당에도 같은 배율(조인 20,248행 중 배율≠1 이 30.8%) · 🔴 **피처 금지**(배당 확정이 주주총회라 미래참조) · 단위 오류는 **크기가 아니라 정합성**으로 가른다(종가 초과 4건 중 3건이 정당한 청산분배금) · [`supply/total_return.py`](../../../supply/total_return.py) · 시험 25건 · [ERD v2.5 §2.1·§2.10](../../erd/version2.5/ERD.md) · [노트북 02/08](../../../notebooks/02-품질·전처리/08.배당을-빼고-재면-하락이-아닌-것이-하락이-된다.ipynb) |

### 2.3 팀원이 자료를 꺼내는 정문 (D-30 ~ D-32)

| ID | 할 수 있는 일 | 상태 | 확인 방법 |
|---|---|---|---|
| D-30 | 함수 하나로 꺼내 쓴다 | ✅ | `tests/test_supply_price.py` · `supply.universe` · `supply.sector` |
| D-31 | 자료를 박제해 해시로 고정한다 | ✅ | 반출물마다 대장(`MANIFEST*.json`)에 SHA-256 · `verify_hf_dataset.py` 가 대조 |
| D-32 | 컬럼 뜻을 문서에서 읽는다 | ✅ | [ERD v2.4](../../erd/version2.4/ERD.md) (표 **21개** 전수 · **v13** — 지수 기본키에 시장) |

### 2.4 반입 — 남이 준 자료 (D-50 ~ D-52)

| ID | 할 수 있는 일 | 상태 | 확인 방법 |
|---|---|---|---|
| D-50 | 규격으로 행 단위 판정한다 (합격/격리/반려) | ✅ | `tests/test_inbox_engine.py` 외 5종 · [핵심코드 ②](../../핵심코드/version1.2/02-반입-엔진.md) |
| D-51 | 판정을 사람이 읽는 보고서로 낸다 | ✅ | `reports/inbox/<날짜>/` — 자료는 싣지 않는다 (Public 저장소) |
| D-52 | 손으로 받은 cp949 CSV 를 정규화한다 | ✅ | `scripts/normalize_manual.py` · 업종 스냅샷도 이 길로 (`normalize_manual_sector`) |

⚠️ 반입에 열린 빚: OR 규칙이 칸 하나만 없어도 통째로 스킵(#52 · 닫힘) ·
`accepted_frame` 빈 표에 칸이 안 남음(#45 · 닫힘) · `aliases.close` 에 '수정종가'(#44).

### 2.5 반출·HF 배포 (D-60 ~ D-66)

| ID | 할 수 있는 일 | 상태 | 확인 방법 |
|---|---|---|---|
| D-60 | 개발구간만 잘라 반출한다 | ✅ | 시세 `export_team_dataset` · 🆕 참조 `export_reference_dataset` · 🆕 텍스트 `export_text_signal` — 셋 다 **파일을 다시 열어** 홀드아웃 재검사 · [핵심코드 ④](../../핵심코드/version1.2/04-반출과-HF-배포.md) |
| D-61 | HF private 로 팀원에게 배포한다 | ✅ | `upload_to_hf.py` — private 을 서버에 재확인 · `--path-in-repo` 필수 · 대장은 `MANIFEST*.json` 하나라도 있어야 |
| D-62 | "이미 최신인가"를 스크립트가 답한다 | ✅ | `verify_hf_dataset.py --skip-download` 종료코드 · 재배포는 세 경우뿐 |
| 🆕 D-63 | **반출 전에 검증기를 전수로 돌린다** (붉으면 안 올라간다) | ✅ | `upload_to_hf.VERIFIERS` 4종 — 신원 · 기본정보 · 업종 · 텍스트 신호 (2026-09-04 전부 ✅) · 규약 7.1 |
| 🆕 D-64 | **품질 원장을 반출본에 싣고 카드에 게시한다** (막지 않고 적는다) | ✅ | `supply/quality_ledger.py` · `QUALITY_LEDGER.json` 5축 17지표 · 이력 `reports/quality_ledger.jsonl` · 규약 §7.1 · 09-08 판정 `red`(붉은 항목 1 · `outlier.adj_suspect_rows`) |
| 🆕 D-65 | **배포 고지문을 저장소에 정본으로 둔다** | ✅ | [HF_배포_변경이력.md](HF_배포_변경이력.md) → 반출 때 `CHANGES.md` 로 복사. 서버에만 두었더니 09-03 에서 멈춰 배포 세 번이 고지되지 않았다 |
| 🆕 D-66 | **공급 층의 판정을 반출본 칸으로 내보낸다** | 🟡 | 업종 4칸 ✅ · 품질 플래그 4칸 ✅(09-08) · **주권종류·증권그룹·소속부 ❌** · **정리매매·거래정지·신규상장 ❌**([퀀트기준_대조 §3.5](퀀트기준_대조.md)) |

### 2.6 실행 기록 (D-70)

| ID | 할 수 있는 일 | 상태 | 확인 방법 |
|---|---|---|---|
| D-70 | 수집이 지금 돌고 있는지 밖에서 본다 | ✅ | v8 — `ingest_run`·`ingest_run_stage` · `tests/test_run_log.py` |

### 2.7 화면 (이관)

D-40~43(수집 현황 화면)은 **2026-08-31 부로 강민석 님 담당**입니다. 스택은 Streamlit.
화면이 읽을 재료(품질 JSON · 대장 · 예산 · 실행 기록)는 위 표들이 준비해 둔 상태입니다.

### 2.8 텍스트 신호 — 공시 제목을 수치 칸으로 (D-80 ~ D-85 · **v12 구현 · 신호 없음**)

설계는 [고도화 설계 §2](고도화_설계.md)(09-03), 구현과 결과는
[기능명세 v1.5 텍스트 신호](../../기능명세/version1.5/텍스트_신호.md) ·
[노트북 06/05](../../../notebooks/06-검토·발견/05.신호가-없다도-재현-가능해야-한다.ipynb) ·
[이슈 #105](https://github.com/devlee328288/Alpha_Stack/issues/105).

설계와 달라진 것: 원격 제로샷이 아니라 **로컬 CPU 의 `snunlp/KR-FinBert-SC`** (0원 · 7분),
행마다가 아니라 **고유 제목마다**(18,600 / 1,555,556 · 1.2%), 번호는 v11 이 아니라 **v12**.

| ID | 할 수 있는 일 | 상태 | 확인 방법 |
|---|---|---|---|
| D-80 | 공시 목록을 접수일과 함께 쌓는다 | ✅ | `dart_disclosure` **1,555,556행** · 법인 2,651 · 2010-01-04 ~ 2026-09-04 · 날짜로 받는다 (`page_count` 상한 100 · 한 해를 물으면 `total_count` 가 `None`) |
| D-81 | 제목을 긍/부/중 **확률 3칸**으로 바꾼다 | ✅ | **로컬** — `score_text_signal.py` · 라벨은 자리가 아니라 `id2label` 이름으로 · 리비전 `f8586286` · 확률 합 1 은 DB `CHECK` |
| D-82 | "알게 된 날"을 접수일 **다음 거래일**로 센다 | ✅ | `rceptDt+1session` · 반출 때 만든다 · 🔴 자르는 기준은 접수일이 아니라 `known_at` (봉인으로 넘어간 **522행** 제외) · `tests/test_text_signal.py` 20건 |
| D-83 | ~~HF 호출을 예산으로 센다~~ | 폐기 | 로컬 추론이라 과금이 없다. 원격이 필요해지면 D-04 의 `hf_inference` 출처로 되살린다 |
| D-84 | 별도 파일 `text_signal_dev.parquet` 로 반출한다 | ✅ | HF `text/` **1,295,176행 × 13칸** · `MANIFEST_text.json` · `verify_text_signal.py` 6절 게이트 |
| 🆕 D-85 | **신호가 있는지 바깥 기준으로 잰다** | ✅ 결과 **없음** | 감성 × 5일 방향 카이제곱 — `chi2` 1,698.3 · **Cramer's V 0.026** · 긍정이 중립보다 상승을 덜 맞힘 · 설정 12조합 전부 V < 0.04 · 재현은 노트북 06/05 |

🔴 **`report_nm` 을 그대로 피처로 쓰지 마세요.** 같은 문장(`사업보고서 (YYYY.12)`) 15개 연도가
전부 중립인데 5일 상승 비율은 11.1 ~ 81.0% 로 갈립니다 — 감성이 아니라 **연월이 가리키는 시장
국면**입니다. 원-핫·임베딩으로 넣으면 모델이 시점을 외웁니다.

### 2.9 버튼 갱신 파이프라인 — 한 명령 · 잠금 (D-90 ~ D-93 · ✅ **구현** · 7단계)

설계는 [고도화 설계 §3](고도화_설계.md)(09-05 오전), 구현과 실측은
[기능명세 v1.7](../../기능명세/version1.7/버튼_갱신_파이프라인.md). `python -m pipelines.refresh`
하나로 **수집 → 달력 → (수정주가) → 게이트 → 판정 → (필요할 때만) 반출 → 업로드** 7단계를 잇습니다.
설계와 달라진 것 — 단계가 다섯이 아니라 **일곱**(`adj` 를 넣었고 🔴 기본은 끈다 · `calendar` 를
제 단계로 세웠다 · PR #152), 판정은 받아서 대조, 진행 표시는 부모·자식 양쪽 버퍼를 푼다,
`--force-export` 깃발은 실행을 열 때 세운다. 버튼 배선은 강민석 님 화면입니다.

| ID | 할 수 있는 일 | 상태 | 확인 방법 |
|---|---|---|---|
| D-90 | 두 번 눌러도 한 번만 돈다 (파일 잠금 · 즉시 `busy` + **진행 중 run_id** 반환) | ✅ | `filelock`(MIT) · `data/refresh.lock` · `timeout=0` · `tests/test_pipelines_refresh.py` **28건**(함수 26 · 토큰 없는 PC 는 세 단계로 매개변수화) |
| D-91 | 며칠 안 눌러도 구멍이 없다 (`daily_price` 마지막 날 → 오늘의 평일 수 · 최소 3 · 상한 250) | ✅ | 고정 `--days 10` 을 버렸다 · ⚠️ 공휴일은 안 뺀다(`trading_days` 가 주말만 거르므로 빼면 창이 짧아진다) |
| D-92 | 게이트 실패면 HF 로 가지 않고, 최신이면 올리지 않는다 | ✅ | `check_data.py` exit 1 → `gate_failed` 중단 · `verify_hf_dataset.py` 0 최신 → `uploaded=false` · 2 필요 → 반출·업로드 · 검증기 4종(D-63)은 업로드 안에서 한 번 더 |
| 🆕 D-93 | **거래일 달력은 매번 다시 깐다** — 수정주가를 꺼도 달력은 안 꺼진다 | ✅ | `build_adj_prices.py --calendar-only` · 19초 · 원가격 지문 앞뒤 대조 · 🔴 달력이 시세보다 뒤처지면 `next_session()` 이 `CalendarOutOfRange` 로 서서 `known_at` 계산이 통째로 멈춘다(09-07 사흘치 실측) |

실측(2026-09-05 · 09-07): 기본 실행 **4분 37초**(수집 18초 · 달력 19초 · 게이트 106초 · 판정 152초 ·
반출 185초) · 수정주가를 켜면 +13분 11초 · 09-07 재배포 `run_id 20260907-101640` 전 단계 ok 11분.
🔴 **수정주가는 기본으로 끕니다** — 매번 돌리면 FDR 창이 밀린 만큼 옛 행이 `fdr → chain` 으로
내려앉습니다(20거래일에 11,502행). 조정 코드가 바뀐 날에만 `--with-adj`.

### 2.10 에이전트 관측 규격 — 2·3차 계약 (D-100 · 명세만)

전문은 [고도화 설계 §4](고도화_설계.md). 변화 없음 — 🔴 2차.

### 2.11 🆕 개별종목 학습 표본 — 후보 패널을 전수로 쟀다 (2026-09-07 오후 실측)

오준영 님이 #155 로 개별종목 피처 조합 B~F 를 제안하시고 #161 로 구현하셨습니다. 그 표본이
어떤 모양인지 데이터 파트가 **구현된 코드로**(`supply.stock_training_universe` ·
`features.stock_model_dataset`) 전수 실측한 값입니다. 재현은
[노트북 06/11](../../../notebooks/06-검토·발견/11.가장-센-피처가-방향을-못-맞힌다.ipynb) ·
[06/12](../../../notebooks/06-검토·발견/12.앞당기려면-종목이-아니라-지수가-필요하다.ipynb).
환경은 anaconda 3.12.13 · 09-07 반출본 · main `e4dd849`.

| 무엇 | 실측 | 뜻 |
|---|---|---|
| 후보 패널 | **176,705행 · 3,618거래일 · 166종목** · 라벨 가능 175,914행 | 업종 10 × 시가총액 상위 5 (KOSPI) |
| 날짜당 후보 | **46~50** — 50 미만인 날 69.57% | 원인은 통신 업종(평균 3.34종목). "최대 50" 이지 "항상 50" 이 아니다 |
| 정지일(zero-OHLC) | 전 시장 231,808행(2.94%) → 후보 361행(0.204%) → **라벨 있는 행 28(0.016%)** | 🔴 영향 범위는 구현한 코드가 실제로 도는 자리에서 센다 — 전 시장 비율로 말하면 180배 과장된다 |
| 조합별 유효행 | A 172,924 · C 174,900 · E 172,880 · F 174,918 · **6개 공통 172,379** | 조합마다 표본이 다르므로 비교는 공통 행에서 |
| 12폴드 OOS | **35,248행 · 720거래일** · 최빈 클래스 비율 0.3851 | 오준영 님 보고값 0.3849 재현(#132 필터 1건 차이) |
| 적용 기준선 | 학습 최빈 → 검증 적용 **31.71~47.64% · 평균 38.54%** · 조합 A vs G 최대 차 0.01%p | 검증구간 자체의 최빈은 미래를 본 값이라 참고용으로만 ([ADR 0006](../../decisions/0006-개별종목-중립대와-평가기준선.md)) |
| 중립대 ±2.0% 근거 | 개별종목 5일 수익률 표준편차 **5.277%** vs KOSPI200 2.404% = **2.195배** | 지수 ±1.0% × 2.195 = ±2.20% 라 ±2.0% 가 일관된다 (#158) |
| 다중공선성 | 조합 C VIF **2,685.40**(`ret_1` 을 빼면 5.79) · A 최대 23.66 · E 중앙값 1.35 | C 에 곱셈 항등식이 있다 |
| 인라인 vs 원자 함수 | 3,315,889행 대조 — `atr_ratio`·`obv_slope_20`·`macd_hist_atr` 최대차 **0.0** · `hv_regime` 만 73행(KOSPI200 은 0) | 값이 같아도 가는 길이 다르면 갈린다 → PR #162 로 원자 함수 호출로 통일 · 73행은 `_rolling_mean` 누적합 정밀도(신장환 님께 질문) |
| 공통 OOS 시작일 (#159) | 조합 E 첫 사용 가능일 20110127(준비구간 **269**거래일) → 첫 검증일 20140217 · 지수를 2008 부터 붙이면 **20130212(249거래일 앞당김)** | 필요한 것은 종목이 아니라 **KOSPI200 지수** · FDR 캐시 501행 · 겹치는 닷새 전부 동일 · 종목 2008~2009 는 FDR·KRX Open API 둘 다 0행 |
| 오준영 님 #161 결과 | 조합 F + LightGBM · Top-1 **0.4833** vs 무작위 0.3452 (+0.1381) | 모델 파트 값 · 데이터 파트는 표본만 책임진다 |

---

## 3. HF 배포 체계 — 파일은 HF 에, 방법은 저장소에

레포 둘, 층 둘 (2026-09-07 실측 · 22파일 · 이날 **두 번** 재배포 — 아침 `industry_ambiguous` 신설
`run_id 20260907-101640` · 오후 51종 재생성 뒤 `20260907-134654`. 오후 첫 시도 `20260907-132312` 는
**검증기가 막았다** — 종목기본정보 안 받은 (날짜,시장) 쌍 6 · 받고 나서 올렸다).

| 레포 | 내용 | 구조 |
|---|---|---|
| `qurious-quant/alphastack-krx-dev` | KRX 개발구간 반출 **+ 종류별 참조 자료** | 🔴 **반드시 private** (KRX 약관 제11조 ②) |
| `qurious-quant/alphastack-dart` | DART 재무 | **bulk/ 44파일**(접수일 없음 · 학습 금지) + **pit/ 11파일**(접수일 포함 · 학습은 이것만) |

`alphastack-krx-dev` 안의 종류별 폴더 — **`full/`·`small/` 은 옛 경로를 그대로 두고**, 새로 올리는
것만 종류별 폴더를 따릅니다(팀원 코드가 그 경로를 그대로 씁니다).

| 폴더 | 파일 | 행 × 칸 | 대장 | 만드는 것 |
|---|---|---|---|---|
| `full/` | `daily_price_dev` · `index_price_dev` | 7,888,945 × **24**(🆕 `industry_ambiguous`) · 171,435 × 12 (51종) | `MANIFEST.json` | `export_team_dataset.py` |
| `small/` | 피처·라벨 CSV 5 + `sample_codes.json` | 80,439 × 45 (30종) | 〃 | 〃 |
| `identity/` | `stock_identity_dev` · `corp_profile_dev` | 2,871,366 × 9 · 22,137 × 18 | `MANIFEST_reference.json` | `export_reference_dataset.py` |
| `financial/` | `dart_financial_dev` | 498,059 × 20 | 〃 | 〃 |
| `macro/` | `macro_series_dev` | 15,782 × 8 | 〃 | 〃 |
| `calendar/` | `trading_calendar_dev` | 10,854 × 3 | 〃 | 〃 |
| `text/` 🆕 | `text_signal_dev` | 1,295,176 × 13 | `MANIFEST_text.json` | `export_text_signal.py` |

- 학습 재무는 **pit/**(또는 `financial/`)만 씁니다. 시점은 `rcept_dt`(접수일).
- 재배포는 세 경우뿐 — ①홀드아웃 경계 이동 ②개발구간 값 변경 ③반출 규격 변경.
  **새 시세만으로는 안 올립니다.** 다만 **수집이 끝나면 매번 반출 게이트를 돌려** 셋 중 하나에
  걸리는지 스크립트가 답하게 합니다(강사님 09-04 · 팀원이 계속 테스트할 수 있게).
- 대장이 셋인 이유: 한 이름(`MANIFEST.json`)이면 시세 반출 이력을 참조 반출이 덮습니다.
  `upload_to_hf` 는 `MANIFEST*.json` 이 **하나라도** 있어야 올립니다.
- 카드(`README.md` 40KB)는 파일을 바꿀 때 **같이** 갱신합니다 — 파일만 바꾸면 팀원이 옛 설명을 봅니다.
- 팀원이 못 받으면 `scripts/check_hf_access.py`.
- ℹ️ 강민석 님의 백테스트 결과 4종(`alphastack-backtest-results` · `-kospi200` · `-cost-sensitivity` ·
  `-breakeven-cost`)은 **public** 이고 전략 단위 요약이라 원자료 재배포가 아닙니다 (09-04 실측). 되먹임
  인터페이스는 §7 ⑮.

---

## 4. 데이터 사전

**[ERD v2.4](../../erd/version2.4/ERD.md) 로 옮겼습니다** — 표 21개 전수를 `PRAGMA` 실측으로
그린 판(v13)입니다. 여기는 함정 요약만 남깁니다.

- 🔴 `close` 는 KRX 원문 그대로라 **수정주가가 아닙니다**. 수익률·라벨·모멘텀은 `adj_close`,
  변동성은 `adj_high/low/open`, **시가총액만** `close` 입니다(v9). 거래정지일의 `adj_open/high/low`
  는 NaN 입니다 — 0 으로 채우면 "그날 0원" 이 됩니다.
- 🆕 🔴 **수정주가 오류는 크기가 아니라 어긋남으로 봅니다.** `|adj 수익률| > 100%` 같은 크기 필터는
  진짜 사건(경남에너지 +153.66% = KRX +153.66%)을 지우고 오류(신세계 −60.6% vs KRX +14.95%)는
  못 잡습니다. `supply.adj_quality` 의 `is_adj_suspect`(KRX `change_rate` 와 1%p 넘게 어긋남)로
  빼고, `is_extreme_return` 은 남깁니다. ⚠️ 이 칸들은 **반출본에 없습니다** — 공급 층에서
  붙입니다(품질 원장이 게시할 대상 · [설계](데이터_품질_원장_설계.md)).
- 🆕 `index_price` 기본키는 `(bas_dd, index_name, index_class)` 입니다(v13). KOSPI 와 KOSDAQ 이
  `건설`·`금속`·`화학` 같은 **같은 이름의 업종지수**를 각각 가지므로 시장 없이 조인하면 덮습니다.
- 🔴 **FDR 은 감자를 조정하지 않습니다.** 액면분할은 액면가가 같이 바뀌지만 감자는 그대로라
  액면가로 판정하면 안 보입니다 — 주식수 배율 ≥ 2 로 판정합니다 ([품질 규약 §6](데이터_품질_규약.md)).
- `code` 는 여섯 자리 **숫자가 아닙니다** — 5·6번째 자리에 영문 84종.
- 🔴 **우선주는 이름으로 판정하지 않습니다.** `stock_base_info.kind_stkcert_tp_nm` 이 정본 —
  이름추측은 10종·10,190행이 어긋납니다(포스코대우 · S&T대우 · 디피아이홀딩스2B …).
- 🔴 `stock_identity` 의 `basDt` 목록은 **그 시점의 상장 목록이 아닙니다** (4년 뒤 상장 33종).
  유니버스는 `daily_price` 와 교집합. 외국기업 `crno = 0000000000000` 은 먼저 거릅니다.
- 자리표시자 셋 — `00010101`(해당 없음) · `99991231`(아직 폐지 안 됨) · `0000000000000`(법인번호 없음).
  바닥 `18000101` · 천장 `21001231` 밖은 `None`.
- `dart_financial` 을 직접 집계할 때 기본키에 `account_detail` 이 필수 — 빼면 자본변동표 6.4% 가
  조용히 사라집니다.
- `macro_series.known_at` · `stock_identity.known_at` · 텍스트 신호의 `known_at` 은 **계산값**,
  `corp_profile.known_at` 은 **관측값**. 규칙을 바꾸면 계산값은 다시 만듭니다(원문이 있으니 재수집이 아님).
- `text_signal` 은 **제목 단위 캐시**라 시점 칸이 없습니다. 시점은 반출 파일의 접수번호에 붙습니다.
- 🆕 🔴 `dividend.dvdn_bas_dt`(배당기준일)는 **값이 움직이는 날이 아닙니다.** 12월 결산법인의
  기준일은 12월 31일이고 그날은 휴장입니다(12월 기준일 중 거래일 **0.3%**). 시세와 조인할 때는
  반드시 **`ex_date`**(배당락일 · 기준일에서 거래일 두 걸음 앞)를 씁니다. 계산값이므로
  `ex_date_rule` 이 함께 있습니다.
- 🆕 🔴 `dividend.par_price_at_load` 는 **그날의 액면가가 아닙니다** — 적재 시점 값입니다
  (삼성전자 1987년 배당 행에도 100원). 옛 행의 배당률(액면 대비 %)에 곱하면 틀립니다.
  **금액이 빈 행은 빈 채로 둡니다.** 2018년 이후는 금액 채움이 98% 를 넘습니다.
- 🆕 `dividend` 에 **원본의 단위 오류 5행**이 있습니다(배당수익률 50% 초과). 최대는
  윙입푸드홀딩스 주당 18.5억 원입니다. 그대로 평균을 내면 배당수익률 평균이 6,353% 가 됩니다 —
  **중앙값은 1.63%** 입니다. 쓰는 쪽에서 거릅니다.
- CSV 는 float64 를 온전히 담지 못합니다 — **팀원에게는 parquet 을 권합니다.**

---

## 5. 안 하는 것

| 무엇 | 언제 | 왜 |
|---|---|---|
| 공시 **본문**(`document.xml`) 수집 | 3차 | 제목이 먼저였고 제목에는 신호가 없었다. 본문은 같은 표·검증기를 쓴다 |
| 뉴스·카페글·동영상 메타 | 2·3차 | Must 에 없다 · 뉴스는 네이버 약관 7.3 ③ **저장 금지** — 점수만 남기는 안도 법적 판단이 먼저 |
| PostgreSQL / TimescaleDB | Won't | 팀원 4명이 각자 920만 행을 다시 적재해야 한다. 관련 경로는 죽은 코드로 동결 |
| 종목토론방 수집 | Won't | `robots.txt` 가 제3자 크롤러에게 전체 불허 |
| KRX 업종분류현황 **자동 수집** | Won't | KRX 약관이 금지 · 스냅샷은 사람이 받는다 (D-17) |
| 이상치 자동 삭제 | Won't | 2020-03 급락은 실제 사건이다. 층별로 — 수집은 안 자르고 피처에서 자른다 ([품질 규약 §4](데이터_품질_규약.md)) |
| 원 가격 칸을 수정주가로 **덮어쓰기** | Won't | 원자료 보존. 조정은 `adj_*` 별도 칸으로 |
| 생성형 모델 (NuExtract·ReaderLM·Gemma 류) · **파인튜닝** | Won't (예외는 먼저 묻는다) | 절대 제약 |
| 🆕 인코더 **원격** 추론을 기본으로 | 개정 (v3.4) | **인코더는 로컬 추론이 기본**이다 — 0원 · 리비전 고정 · 이 규모(만 단위)는 CPU 로 분 단위. 원격은 예산(D-04) 안에서만. v3.2 "모델 로컬 다운로드 Won't" 는 **뒤집혔다** ([변경사항 §5](변경사항.md)) |
| `report_nm` 을 그대로 피처로 | 🔴 금지 권고 | 시점이 샌다 (§2.8) |
| Actions 가 저장소에 **커밋** | Won't | 자동 대량 활동 판정에 가장 가깝다 |

---

## 6. 지금 안고 있는 빚

| 무엇 | 크기 | 어떻게 할 것인가 |
|---|---|---|
| 🆕 자본변동 **당일 하루**가 부정확 | 20종 × 1일 | 계수를 상장주식수 배율에서 얻는데 KRX 기준가는 다른 값이다(아센디오 −10.22% vs KRX +3.25%). **다음날부터는 정확하다.** 정지 중 종가가 직전 실질가가 아니라서 생긴다 — 고치려면 정지 직전 실질가를 따로 구해야 한다 |
| 🆕 FDR 이 조정을 **하루 일찍** 놓는 자리 | 2종 × 1일 | 티이엠씨 2023-12-28 · 폰드그룹 2025-12-30. 우리 보정이 만든 것이 아니라 FDR 원값의 성질이다 — 고치려면 FDR 값을 하루 밀어야 하는데 근거가 약하다 |
| 🆕 FDR 구간 **의심 1,234행** (전 시장 개발구간 · gap > 1%p) | 후보군에는 **0행** | FDR 이 KRX 와 다르게 편 자리(권리락 계수 등)로 보인다. 모델에는 안 걸리지만 다음 실측 거리 — chain 119행도 함께 |
| 🆕 `hv_regime` 인라인 vs 원자 함수 **73행** | KOSPI200 은 0 · 개별종목 패널에서만 | `volatility._rolling_mean` 이 누적합 차분이라 250일 창에서 정밀도가 깎인다. **신장환 님 파일** — 그대로 / `eps` 임계 / `rolling().mean()` 셋 중 하나를 #155 에서 여쭤 둠 |
| 🆕 #159 지수 준비구간 파일 | KOSPI200 2009-01-08 ~ 2009-12-30 · 269거래일 | 받을 수 있고 하루면 된다(별도 `index_price_warmup.parquet` 권고). **오준영 님 결정 대기** — "현재 결정은 유지" |
| 🆕 품질 플래그가 반출본에 없다 | `is_adj_suspect` 등 4칸 | 공급 층에서 붙인다. HF 로 받는 팀원은 같은 함수를 돌려야 한다 → [품질 원장 설계](데이터_품질_원장_설계.md) 가 답한다 (구현 다음) |
| `verify_hf_dataset.py` 가 피처·라벨을 안 본다 | #80 류 사고를 못 잡는다 | 원시 자료 대조에 피처·라벨 대조를 더한다 |
| ~~`--days 10` 고정 창~~ | ✅ **닫힘 (v3.9)** | D-91 — `daily_price` 마지막 날에서 거꾸로 센다 |
| 반입 `aliases.close` 에 '수정종가' (#44) | 판정 정확도 | 반입을 다시 만질 때 |
| 예산 연결 KRX·DART·포털 | ECOS 등은 `try_spend` 미연결 | 그 출처를 대량으로 부를 때 |
| `AsOfRequired` 가 안 던져진다 | 문서 여러 곳이 이 이름을 적음 | 실제로는 내장 `TypeError` — 문서 쪽을 고쳐 간다 |
| 대장(`MANIFEST*.json`)에 생성 커밋이 없다 | 재현 검증 불가 | 다음 재배포 때 git sha 를 넣는다 |
| ~~업종 스냅샷 KOSDAQ~~ · ~~`index_price` 기본키에 시장이 없다~~ | ✅ 18장(v3.8) · ✅ **v13 (v3.9 · PR #157)** | KOSDAQ 업종지수는 이제 **받아도 KOSPI 를 안 덮는다**. 다만 필요로 하는 곳이 없어 **선택**으로 둔다 |
| `.venv` 가 pyproject 와 어긋남 | `FinanceDataReader` 없음 → 시험 수집 1,136 + 오류 1 | `uv pip install -e ".[dev]"` · 🔴 기준선 숫자(1,312)는 **anaconda** 값 |
| anaconda `pandas-2.2.2.dist-info` 잔재 | `datasets` import 가 깨진다 (`importlib.metadata` 가 None) | 파일 하나(`DELVEWHEEL`) — 지우려면 사용자 확인 |
| ~~`docs/TIL/README.md` 이동원 표~~ | ✅ 닫힘 | 09-07 일곱 장까지 등재됐다 |
| 🆕 `adj_close` 09-02 ~ 09-04 사흘 **8,294행** 비어 있음 | 전체의 0.09% · 전부 홀드아웃 | 채우지 않는다 — 채우려면 FDR 을 다시 돌려야 하고 그러면 비슷한 규모가 `chain` 으로 내려앉는다. 홀드아웃을 열기 전에 한 번 `--with-adj` |
| 🆕 오준영 님 스크립트의 HF 경로 | `data/raw/hf_snapshot` 고정 | 내려받은 사본과 반출본이 다르면 재현이 어긋난다 — 남의 파트라 관찰만 · 노트북 06/12 는 반출본 자리로 바꿔 돌렸다 |
| 달력 밖 접수일 | 4종 | 결함이 아니라 경계 — 시세가 하루 늘면 채워진다 |
| 🆕 `adj_close_tr`(총수익 수정주가) 미구현 | 배당 자료는 있다 | 다음 세션 — 반출 칸이 늘면 따라오는 곳이 다섯이라 독립 작업으로 |
| 🆕 배당 단위 오류 5행 | 전체의 0.02% | 품질 원장에 올릴지 결정. 지금은 원문 그대로 담고 쓰는 쪽에서 거른다 |
| 🆕 배당 금액이 없는 3,324행 | 2010+ 현금배당의 12.9% | **채우지 않는다** — 액면가가 적재 시점 값이라 배당률 × 액면가가 틀린다 |
| 🆕 우리 종목에 안 붙는 배당 4,162행 | 2010+ 의 16.2% | 상장 이력이 늘면 다시 붙는다. 원문은 담아 두었다 |
| 🆕 README 구성도가 GitHub `main` 에 매달린다 | 한 줄 | Private 전환·파일 이동 시 GitLab 이 다시 깨진다. 그때 마크다운 문법으로 (v4.2 §4) |
| Postgres 죽은 코드 1,428줄 | 세 파일 | 동결 유지 |

닫힌 것(v3.8 → v3.9): ~~`--days 10`~~(D-91) · ~~TIL 표~~ · ~~`index_price` 기본키~~(v13).
그 전(v3.5 → v3.6): ~~전 종목 재빌드 · HF 재배포~~(3,677종 · 12파일 404MB 업로드) ·
~~`verify_base_info` §9 임계 2배~~(**재고 나서 2배 유지** — 1.5~2.0 구간의 유일한 자리가
감자가 아니었다) · ~~오염 배포본 `data/outbox/2026-08-31`~~(이번 반출에서 정리).
그 전(v3.4 → v3.5): ~~감자 보정 코드가 정본에 없다~~ · ~~극단 수익률 32행~~.
그 전(v3.3 → v3.4): ~~`next_session` 선형 탐색~~ · ~~HF 토큰 추론 권한~~ · ~~반입 #52 · #45~~.

---

## 7. 다음 로드맵 (2026-09-05 재배열)

| 순번 | 무엇 | 상태 · 비고 |
|---|---|---|
| ⑨ | 공공데이터포털 — 신원·법인 개요(v10) · 경로 틀 둘 · 예탁결제원 | ✅ (PR #91 · #104) |
| ⑫ | 텍스트 신호 v12 (D-80~85) | ✅ **신호 없음으로 종결** (PR #108) — 본문·뉴스는 2·3차 |
| ⑬ | ~~극단 수익률 32행 · 감자 보정 정본화~~ | ✅ **v3.5** — 32행 → **0행** · `scale_series` ⑤ · 16종 재빌드 |
| ⑬-b | ~~전 종목 재빌드 → 반출 → HF 재배포~~ | ✅ **v3.6** — 3,677종 · 관문 ③ 신설 · 게이트 4종 통과 · 12파일 404MB · 업종 칸 3개 첫 반출 |
| ⑭ | ~~중기·장기 피처~~ | ✅ **신장환 님이 하셨다** (PR #116) — 주간은 `five_day_return` 이 이미 있었고 월간 `monthly_return`(20거래일)을 더하셨다. [피처파트 v1.0](../../피처파트/version1.0/피처_두_층과_중장기_수익률.md) |
| ⑮ | **백테스트 결과 되먹임 인터페이스** — ✅ **1차(v3.7)**: 강민석 님이 원장에 칸 아홉을 뚫었고(PR #131 · `signal_log` 17 · `trade_log` 22) 데이터 파트가 **계약 검증기** `supply/backtest_ledger.py` + 시험 33건을 냈다(PR #135). 🔴 원장은 아직 HF 에 없다 · 선언된 환경에서 `backtest_strategies.py` import 불가(`datasets`) · `hash()` 시드라 실행마다 다름 → #110 질문 셋 | **2차**: 원장이 HF 에 오르면 `scripts/verify_backtest_ledger.py` 로 게이트 등록 · `daily_price`·`adj_close`·라벨 조인 정문(`supply/`) · 되먹임 피처(`known_at` = 체결일 다음 거래일) |
| ⑩ | FastAPI — 강사님 골격 + `supply` 껍데기 + `/runs` + `/refresh` | 설계 ✅ ([도입 설계 §3](강사님저장소_분석과_도입설계.md)) |
| ⑪ | ~~갱신 파이프라인 `pipelines/refresh.py` + `filelock` (D-90~93)~~ | ✅ **v3.9 구현** — 7단계 · 시험 28건 · 09-07 재배포 두 번 · 검증기가 한 번 막았다 (§2.9 · [기능명세 v1.7](../../기능명세/version1.7/버튼_갱신_파이프라인.md)) |
| ⑯ | 🆕 **데이터 품질 원장** — 게이트가 결측·이상치·`is_adj_suspect`·달력 정합·중복을 표로 내고 반출본과 함께 HF 카드에 게시 | **설계 ✅ v3.9** ([설계](데이터_품질_원장_설계.md)) · 구현은 다음 |
| ⑰ | 🆕 #159 지수 준비구간 파일 (`index_price_warmup.parquet` · KOSPI200 2009 · 269거래일) | 실측 ✅ ([노트북 06/12](../../../notebooks/06-검토·발견/12.앞당기려면-종목이-아니라-지수가-필요하다.ipynb)) · **오준영 님 결정 대기** |
| ⑱ | 🆕 **배당 수집** (`dividend` v14 · 71,681행 · 배당락일 계산·검증) | ✅ **v4.2** (PR [#220](https://github.com/devlee328288/Alpha_Stack/pull/220)) |
| ⑲ | 🆕 **`adj_close_tr`** — 총수익 축. `adj_close` 는 그대로 두고 옆에 더한다 | **다음** — 따라오는 곳 다섯을 함께 |
| ⑳ | 🆕 **기업행위 이벤트 표** (#186 D) | `stock_base_info.list_dd`·`list_shrs` 와 같은 원천이라 ⑲ 뒤에 함께 |
| CI | `.github/workflows/ci.yml` — 검사만 | 설계 ✅ · **팀 합의(이슈) 후** |
| 2차 | 관측 규격 (D-100) · GitHub 활동 팩터 · 뉴스(약관 판단 후) · 공시 본문 | 명세 ✅ |
| 선택 | ~~업종 KOSDAQ 스냅샷 18장~~ ✅ **v3.8**([가이드 §8](직접수집_가이드_업종분류현황.md)) · ~~`index_price` 기본키 **v13**(#144)~~ ✅ **v3.9** · 종목기본정보 월 1회 960콜 갱신 · KOSDAQ 업종지수(이제 받아도 안 덮는다 · 쓰는 곳이 생기면) | |

---

## 8. 용어집

| 말 | 뜻 |
|---|---|
| `as_of` | "언제 시점에서 본 자료인가". 이 값보다 뒤의 자료는 안 준다 |
| `known_at` | 그 자료를 **알 수 있었던 시각**. 시세는 T+1 0시(계산) · 재무는 접수일(기록) · 거시는 발표 규칙(계산) · 공시 제목은 접수일 다음 거래일(계산) |
| pit / bulk | HF 재무의 두 층 — pit 은 접수일이 있어 학습 가능, bulk 는 없어서 탐색만 |
| 반입 / 반출 | 남이 준 파일을 들이는 것 / 팀원에게 내보내는 것 |
| 봉인 구간 | 최종 검증 전까지 열지 않는 홀드아웃. 경계 정본은 `evaluation/horizon.py` |
| 검증기 | `scripts/verify_*.py` 5종 — 값이 규격에 맞나를 **전량**으로 잰다. 뜻이 맞나는 못 잰다 |
| 효과크기 · Cramer's V | 관계의 **크기**. p 값은 표본이 크면 언제나 작아지므로 126만 행에서는 이것으로 판단한다 (0.1 = 작음) |
| 자리표시자 | 출처가 "값 없음" 대신 넣는 멀쩡해 보이는 값 — `00010101` · `99991231` · `0000000000000` |
| 1 ULP | float64 의 마지막 비트 하나. CSV 왕복 표기 한계의 단위 |
| 기준가 조정 | 액면분할·병합·감자·증자로 기준가가 바뀌는 일. 과거 주가는 안 고쳐진다 → `adj_*` 4칸 |
| batch_id | 반입 묶음 열쇠 `<끝난시각>-<SHA-256 앞 12자>` |

---

## 부록 A. 왜 이렇게 만들었나

v2.1 부록 A(원문 보존 · 게이트 철학)는 그대로 유효합니다 —
[v2.1 부록 A](../version2.1/명세서.md#부록-a-왜-이렇게-만들었나). v3.0 이후의 "왜"는 각
[핵심코드 문서](../../핵심코드/version1.2/)와 [품질 규약](데이터_품질_규약.md)이 답합니다.

## 부록 B. 모듈 지도 (2026-09-07 실측)

`__init__.py` 포함 · 조사용 `_*.py` 제외 · 줄 수 기준 (`find … -name "*.py"` + `wc -l`).

| 폴더 | 파일 | 줄 | 무엇 |
|---|---|---|---|
| `ingest/` (clients·store·inbox) | 38 | 15,176 | 출처별 수집기(KRX·DART·ECOS·금융위·예탁결제원) · 저장·대장·마이그레이션(**v13**)·실행기록 · 반입 엔진 · 🆕 `krx_index._시장가드` |
| `common/` | 12 | 3,334 | 예산(6통)·원문보존·robots·달력(이진탐색)·설정 · `export_profile` · `corporate_actions`(🆕 재개일 규칙 보정) |
| `supply/` | 11 | 2,223 | 공급 정문 (`as_of` 강제) · `universe` · `sector` · `model_data` · `backtest_ledger` · 🆕 `adj_quality` · `stock_training_universe` |
| `features/` | 9 | 2,146 | 지표 · 데이터셋 두 층 (신장환 · 🆕 원자 함수 4개 · 인라인 넷을 원자 호출로) |
| `evaluation/` | 15 | 5,937 | 검증 엔진 · 강민석 님 지표 · 임계 튜닝 6단계 |
| `models/` | 9 | 1,459 | 모델 팩토리 · 🆕 개별종목 조합 A~F · 공통 OOS 일정 (오준영) |
| `backtest/` | 3 | 1,856 | 분할매매 전략 · 비용 민감도 (강민석) |
| `timeseries/` | 9 | 2,085 | 시계열 도구 |
| `scripts/` | 49 | 13,970 | CLI — fetch 7 · check 7 · build 6 · verify 5 · run 5 · export 4 · measure 2 · upload 1 · 그 밖 |
| `tests/` | 72 | 15,495 | **1,312 passed + 3 xfailed** (2026-09-07 · 4분 06초 · anaconda 3.12.13 · 71 파일) |
| `pipelines/` | 3 | 931 | `ingest` · 🆕 `refresh` **7단계 구현** (D-90~93) |
| `api/` | 1 | 28 | 빈 껍데기 — 로드맵 ⑩ |

## 부록 C. 수업에서 배운 것과 우리 자료

[v2.1 부록 C](../version2.1/명세서.md#부록-c-수업에서-배운-것과-우리-자료) 와
[품질 규약 §2·§3](데이터_품질_규약.md)(편향 3종 · 결측 보간 · 수업에 없는 이상치 처리)이 답합니다.
v3.4 에서 더한 것: **카이제곱 독립성 검정(04단원)은 표본이 크면 효과크기와 함께 본다**
(노트북 06/05).

## 부록 D. 이 문서를 쓰는 규칙

[v2.1 부록 D](../version2.1/명세서.md#부록-d-이-문서를-쓰는-규칙) 를 따릅니다 —
굵게 절제 · 이모지 4종(🔴🟡✅⚠️) · 모든 숫자에 잰 날짜 · 상태는 2절에만 ·
제목은 "할 수 있는 일"로.
